# jellyfin-agent-cli

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  SKILL.md  package-lock.json  package.json
.github/actions/setup-build-env/: action.yml
.github/workflows/: release.yml
crates/api/: Cargo.toml
crates/api/src/: client.rs  lib.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  repl.rs
crates/cli/src/commands/: activity_log.rs  auth.rs  channels.rs  config.rs  context.rs  devices.rs  download.rs  items.rs  library.rs  media.rs  mod.rs  notifications.rs  playback.rs  playlists.rs  plugins.rs  remote_search.rs  scheduled_tasks.rs  search.rs  sessions.rs  stats.rs  system.rs  users.rs
crates/cli/src/commands/e2e/: config.rs  logs.rs  media.rs  mod.rs  reset.rs  server.rs  setup.rs  status.rs
crates/cli/src/output/: envelope.rs  formatter.rs  help.rs  mod.rs
crates/cli/tests/: e2e_commands_test.rs  e2e_test.rs  output_contract_test.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  e2e.rs  error.rs  lib.rs  media.rs  output.rs  server.rs
crates/core/src/e2e/: environment.rs
crates/core/src/media/: cache.rs  checksum.rs  downloader.rs  sources.rs
crates/core/src/server/: manager.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs
npm/main/: README.md  package.json
release/: config.json
scripts/: install-current-release.sh
scripts/release/: build-binaries.mjs  ensure-npm-login.mjs  local-build-utils.mjs  prepublish.mjs  publish-npm-packages.mjs  rehearse.mjs  release-config.mjs  sync-platform-packages.mjs  validate-config.mjs
src/: lib.rs  main.rs
tests/: cli_test.rs
tools/: coverage.rs
