[package]
name = "jellyfin-agent-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["jellyfin-cli contributors"]
license = "MIT OR Apache-2.0"
description = "Full-featured command line client for Jellyfin media browsing, playback, administration, and automation workflows."
publish = false

[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/player",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["jellyfin-cli contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.metadata.release]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
jellyfin-cli = { path = "crates/cli" }
