[package]
name = "jellyfin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"

# Core types shared with cli
jellyfin-core = { path = "../core" }

[target.'cfg(windows)'.dependencies]
reqwest = { workspace = true, features = ["native-tls"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots-no-provider"] }
rustls = { workspace = true }
