[package]
name = "jellyfin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Full-featured command line client for Jellyfin media browsing, playback, administration, and automation workflows."

[[bin]]
name = "jellyfin-cli-internal"
path = "src/main.rs"

[dev-dependencies]
# Build the binary for integration tests

[[test]]
name = "e2e_commands_test"
path = "tests/e2e_commands_test.rs"

[[test]]
name = "output_contract_test"
path = "tests/output_contract_test.rs"

[dependencies]
clap = { workspace = true }
console = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }

jellyfin-core = { path = "../core" }
jellyfin-api = { path = "../api" }
jellyfin-player = { path = "../player" }

# Password input
rpassword = "7.3"

# REPL readline support
rustyline = { version = "15", features = ["derive"] }
dirs = "6"
shellwords = "1"
