[package]
name = "jellyfin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
futures-util = { workspace = true }
sha2 = "0.10"

# Config
dirs = "6.0"
keyring = { version = "3", optional = true }

[features]
default = []
keyring = ["dep:keyring"]

[target.'cfg(windows)'.dependencies]
reqwest = { workspace = true, features = ["native-tls"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots-no-provider"] }
